Modernize shen-truffle for Shen 41.2 (#1)
Co-authored-by: Reuben Brooks <reuben@Mac.lan>